# Perception_CPP

./: .gitignore  CMakeLists.txt  README.md  make
cmake/: FindCommonFunc.cmake  FindCompileCfg.cmake  FindCreateFilter.cmake
doc/: 边缘计算端与配置端通信协议.txt
src/: CMakeLists.txt
src/alg/: CMakeLists.txt
src/alg/VisionAlgModule/: CMakeLists.txt
src/alg/VisionAlgModule/detection/: CMakeLists.txt  DetectAlg.cpp  DetectAlg.h  DetectAlgMng.cpp  DetectAlgMng.h  IDetectAlgExp.cpp
src/alg/VisionAlgModule/detection/onestage/: CMakeLists.txt
src/alg/VisionAlgModule/detection/onestage/ssd/: CMakeLists.txt  ISsdAlgExp.cpp  ISsdAlgExp.h
src/alg/VisionAlgModule/detection/onestage/yolo/: CMakeLists.txt  IYoloAlgExp.cpp  IYoloAlgExp.h  YoloAlgVx.cpp  YoloAlgVx.h
src/alg/VisionAlgModule/face/: CMakeLists.txt  FaceAlg.cpp  FaceAlg.h  FaceAlgMng.cpp  FaceAlgMng.h  FaceAlignment.cpp  FaceAlignment.h  FaceDetection.cpp  FaceDetection.h  FaceIdentification.cpp  FaceIdentification.h  IFaceAlgExp.cpp  IFaceAlgExp.h
src/app/: CMakeLists.txt
src/app/CommSafe/: CMakeLists.txt  CommSafeDetect.cpp  CommSafeDetect.h  CommSafeFace.cpp  CommSafeFace.h  CommSafeMng.cpp  CommSafeMng.h  ICommSafeExp.cpp  ICommSafeExp.h
src/common/: CMakeLists.txt
src/common/cmmobj/buf/: SmartBuffer.cpp  SmartBuffer.h
src/common/cmmobj/comm/: CalcCrc.h  CommDefine.h  CommFun.h  Convt.h  Endian.h
src/common/cmmobj/endecode/: Base64.cpp  Base64.h
src/common/cmmobj/ffmpeg/: FFmpeg.cpp  FFmpeg.h
src/common/cmmobj/gencpp/: AccessService.cpp  AccessService.h  access_constants.cpp  access_constants.h  access_types.cpp  access_types.h
src/common/cmmobj/http/: HttpClient.cpp  HttpClient.h
src/common/cmmobj/json/: JsonCpp.cpp  JsonCpp.h
src/common/cmmobj/log4cxx/: Loging.cpp  Loging.h
src/common/cmmobj/mmpool/: mmpool.h
src/common/cmmobj/mutex/: Condition.cpp  Condition.h  LibMutex.cpp  LibMutex.h  RWLock.hpp
src/common/cmmobj/myco/: my_coroutine.h  my_tree.h
src/common/cmmobj/network/: NetTcpDataPkg.cpp  NetTcpDataPkg.h
src/common/cmmobj/onvif/: nsmap.h  onvif_client.c  onvif_client.h  smdevp.c  soapClient.c  soapStub.h  stdsoap2.c  wsaapi.c
src/common/cmmobj/redis/: RedisOpMng.hpp
src/common/cmmobj/rknn/: rknn.h
src/common/cmmobj/thread/: BThreadPool.hpp  Thread.cpp  Thread.h
src/common/cmmobj/threadpool/: threadpool.h
src/common/cmmobj/time/: BTimer.hpp  CpuExeTime.cpp  CpuExeTime.h  Timer.h
src/common/cmmobj/tinyxml/: plat.h  tinystr.cpp  tinystr.h  tinyxml.cpp  tinyxml.h  tinyxmlerror.cpp  tinyxmlparser.cpp
src/common/template/aop/: aop.h
src/common/template/boost/: BoostFun.h
src/common/template/comm/: Any.h  AutoRegFactory.h  CommCommand.h  DllParser.h  FuncInitLst.h  FuncWrapper.h  FunctionTraits.h  NonCopyable.h  ObjectPool.h  Observer.h  ReleaseThread.h  ScopeGuard.h  Singleton.h  TcpMng.h  Variant.h  Visitor.h
src/common/template/datastruct/: Trie.h
src/common/template/ioc/: IocContainer.h
src/common/template/metann/data/: dynamic.h
src/common/template/metann/data/batch/: batch.h
src/common/template/metann/data/facilities/: tags.h  traits.h
src/common/template/metann/data/matrices/: cpu_matrix.h
src/common/template/metann/layers/compose/: compose_kernel.h  linear_layer.h  single_layer.h
src/common/template/metann/layers/elementary/: abs_layer.h  bias_layer.h  weight_layer.h
src/common/template/metann/layers/facilities/: traits.h
src/common/template/metann/layers/recurrent/: gru_step.h  recurrent_layer.h
src/common/template/metann/model_rel/param_initializer/: gaussian_filler.h  uniform_filler.h  var_scale_filler.h
src/common/template/metann/model_rel/param_initializer/facilities/: traits.h
src/common/template/metann/operators/: abs.h  add.h  collapse.h  divide.h  dot.h  element_mul.h  interpolate.h  negative_log_likelihood.h  negative_log_likelihood_derivative.h  sigmoid.h  sigmoid_derivative.h  sign.h  softmax.h  softmax_derivative.h  substract.h  tanh.h  tanh_derivative.h  transpose.h
src/common/template/metann/operators/facilities/: category_cal.h  organizer.h  tags.h
src/common/template/metann/policies/: change_policy.h  policy_operations.h  policy_selector.h
src/common/template/msgbus/: MessageBus.h
src/common/template/paralleltask/: ParallelAlg.h  Task.h  TaskGroup.h
src/common/template/rpc/: RpcWrap.h
src/common/template/time/: TimeWatcher.h
src/common/template/tuple/: TpApply.h  TpForeach.h  TpIndexs.h  TpPrint.h  TpZip.h
src/db/: CMakeLists.txt
src/db/redisdb/: CMakeLists.txt
src/db/redisdb/client/: FSCacheDB.cpp  FSCacheDB.h  FSRedis.cpp  FSRedis.h  Redis.cpp  Redis.h  RedisMng.cpp  RedisMng.h
src/db/sqlitedb/: CMakeLists.txt  SmartDB.cpp  SmartDB.h  SqliteDbMng.cpp  SqliteDbMng.h
src/main/: CMakeLists.txt  main.cpp  main.h
src/main/AlgMng/: AlgModuleMng.cpp  AlgModuleMng.h
src/main/AppMng/: AppModuleMng.cpp  AppModuleMng.h
src/main/CfgMng/: CfgMng.cpp  CfgMng.h  CfgObj.cpp  CfgObj.h
src/main/DbMng/: DbMng.cpp  DbMng.h  RedisDbCli.cpp  RedisDbCli.h  SqliteDbSvr.cpp  SqliteDbSvr.h
src/main/DeviceMng/: DeviceMng.cpp  DeviceMng.h
src/main/MsgBusMng/: MsgBusMng.cpp  MsgBusMng.h
src/main/TransferMng/: RpcTransferMng.cpp  RpcTransferMng.h  TcpTransferMng.cpp  TcpTransferMng.h  TransferMng.cpp  TransferMng.h  VsTransferMng.cpp  VsTransferMng.h
src/transfer/: CMakeLists.txt
src/transfer/http/: CMakeLists.txt
src/transfer/http/client/: HttpClient.cpp  HttpClient.h
src/transfer/rpc/: CMakeLists.txt
src/transfer/rpc/client/: RPCClient.cpp  RPCClient.h  RPCClientMng.cpp  RPCClientMng.h
src/transfer/rtsp/: CMakeLists.txt
src/transfer/rtsp/net/: PullStream.cpp  PullStream.h  PullStreamMng.cpp  PullStreamMng.h  RtspCli.cpp  RtspCli.h  RtspCliMng.cpp  RtspCliMng.h  VideoCommFunc.h  VideoMng.cpp  VideoMng.h  VideoModule.cpp  VideoModule.h  VideoQueue.cpp  VideoQueue.h  VideoQueueMng.cpp  VideoQueueMng.h
src/transfer/serial/: CMakeLists.txt  Serial.cpp
src/transfer/tcp/: CMakeLists.txt
src/transfer/tcp/server/: TcpServerObj.cpp  TcpServerObj.h  TcpServiceModule.cpp  TcpServiceModule.h  codec.h
(+119 files in other folders)
